tests/fail/BitXorErrors.java
//ADD STEP 0

package fail;

import java.lang.System;

public class BitXorErrors {
    public static void main(String[] args){
        System.out.println( 'a' ^ 2);
    }
}
